# metadata-workflow

./: .gitignore  LICENSE.txt  README.md  metadata-workflow.html  metaspace_fetch.py  setup.cfg
src/metadata_workflow/: __init__.py  metaspace_fetch.py
vignettes/: metadata-workflow.Rmd
