###############################################
# Setup Configuration                         #
###############################################
[metadata]
name = metadata_workflow
version = 0.2.0-dev
description = This package connects to the METASPACE website and establishes a workflow for searching, filtering, and downloading mass spectrometry imaging metadata.
long_description = file: README.rst

[options]
# Where is my code
packages = find:
package_dir =
    = src
    
[options.packages.find]
where = src