###############################################
# Setup Configuration                         #
###############################################
[metadata]
name = metadata_workflow
version = 0.2.0-dev
description = This package connects to the METASPACE website and establishes a workflow for searching, filtering, and downloading mass spectrometry imaging metadata.
long_description = file: README.md

# Project info
url = https://github.com/ruepongJonathan/metadata-workflow
project_urls = Source Code = https://github.com/ruepongJonathan/metadata-workflow Bug Tracker = https://github.com/ruepongJonathan/metadata-workflow/issues

# Author
author = Jonathan A Ruepong
author_email = ruepong.jonathan@gmail.com


[options]
# Where is my code
packages = find:
package_dir =
    = src
    
[options.packages.find]
where = src