###############################################
# Setup Configuration                         #
###############################################
[metadata]
name = metadata_workflow
version = 0.2.2-dev
description = This package connects to the METASPACE website and establishes a workflow for searching, filtering, and downloading mass spectrometry imaging metadata.
long_description = file: README.md

# Project info
url = https://github.com/ruepongJonathan/metadata-workflow
project_urls = Source Code = https://github.com/ruepongJonathan/metadata-workflow Bug Tracker = https://github.com/ruepongJonathan/metadata-workflow/issues

# Author info
author = Jonathan A Ruepong
author_email = ruepong.jonathan@gmail.com

# License
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 3 - ALPHA
    LICENSE :: OSI Approved :: MIT LICENSE
    PROGRAMMING LANGUAGE :: PYTHON
    PROGRAMMING LANGUAGE :: PYTHON :: 3.8
    PROGRAMMING LANGUAGE :: PYTHON :: 3 :: ONLY
    
keywords = 
    mass spectrometry imaging
    METASPACE
    metaspace2020

[options]
install_requires = 
    pandas
    matplotlib
    numpy
    metaspace2020

# Where is my code
packages = find:
package_dir =
    = src
    
[options.packages.find]
where = src